--- a/chip/templates/chip/index.html
+++ b/chip/templates/chip/index.html
@@ -1,46 +1,106 @@
+<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>C.H.I.P.</title>
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <style>
-      
+	@media only screen and (max-width : 768px){
+  .center-style .navbar-brand {
+  padding: 0px;
+  transform: translateX(-50%);
+  left: 50%;
+  position: absolute;
+}
+.center-style .navbar-brand>img {
+  height: 100%;
+  width: auto;
+  padding: 7px 14px; 
+}
+}
+
+.center-style .navbar-brand {
+  background: url(static/logo2.png) center / contain no-repeat;
+  width: 200px;
+  transform: translateX(-50%);
+  left: 100px;
+  position: absolute;
+}
     </style>
 </head>
 
 <body>
 
-    <div class="container">
-    <div class="panel panel-default">
-  
-    <div class="panel-body">
-        {% if bat %}
-    <h2>Voltage: {{ bat.voltage }}</h2>
-    <h2>Discharge current: {{ bat.discharge }}</h2>
-{% else %}
-    <p>System information unavailable.</p>
-{% endif %}
+<nav class="navbar navbar-inverse navbar-fixed-top center-style">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
+          <span class="sr-only">Навигация</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand text-hide" href="#">SinoSoft
+        </a>
+      </div>
+      <div id="navbar1" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Статус</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Настройки <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Скрипты</a></li>
+              <li><a href="#">Приложения</a></li>
+              <!--<li class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+              -->
+            </ul>
+          </li>
+          <li class="active"><div id="bat_stat">
+              <div style='color:#FFFFFF'>Напряжение: <p style='color:#FF0000'>Нет данных</p></div>
+              </div></li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
     </div>
-    </div>
-    </div>
+    <!--/.container-fluid -->
+  </nav>
 
- <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
- <script>
-     function refresh() {
-             window.location.reload(true);
-     }
-
-     setTimeout(refresh, 60000);
+    <script>
+ function Reload()
+ {
+$.ajax({
+  url: "battery",
+  cache: false,
+  success: function(data){
+    $("#bat_stat").html("<div style='color:#FFFFFF'>Напряжение: <p style='color:#00FF00'>"+data.volts+" мВ</p></div>");
+  },
+  error:function(data){
+    $("#bat_stat").html("<div style='color:#FFFFFF'>Напряжение: <p style='color:#FF0000'>"+"Нет данных</p></div>");
+  }
+});
+setTimeout('Reload()',1000);
+ }
+setTimeout('Reload()',1000);
 </script>
 </body>
+
 </html>
