--- a/chip/templates/chip/index.html
+++ b/chip/templates/chip/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+ {% load staticfiles %}
 <html>
 
 <head>
@@ -12,30 +13,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <style>
-	@media only screen and (max-width : 768px){
-  .center-style .navbar-brand {
-  padding: 0px;
-  transform: translateX(-50%);
-  left: 50%;
-  position: absolute;
-}
-.center-style .navbar-brand>img {
-  height: 100%;
-  width: auto;
-  padding: 7px 14px; 
-}
-}
-
-.center-style .navbar-brand {
-  background: url(static/logo2.png) center / contain no-repeat;
-  width: 200px;
-  transform: translateX(-50%);
-  left: 100px;
-  position: absolute;
-}
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
@@ -110,7 +88,7 @@ $.ajax({
   url: "battery",
   cache: false,
   success: function(data){
-      if (parseFloat(data.drain) < 10.0)
+      if (parseFloat(data.drain) < 50.0)
     $("#bat_stat").html("<i class='fa fa-flash' style='color:lime'></i><span style='color:white'> "+data.percent+"%</span>");  
       else
       {
