--- a/chip/templates/chip/_layout.html
+++ b/chip/templates/chip/_layout.html
@@ -33,6 +33,7 @@
       <div id="navbar1" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class=""><a href="/">Статус</a></li>
+          <li class=""><a href="/wifi">Wi-Fi</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Приложения<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
