--- a/chip/templates/chip/wifi.html
+++ b/chip/templates/chip/wifi.html
@@ -7,23 +7,27 @@
     <div style='color:#000000'>IP: <span style='color:#000000'> {{wifi.ip}} </span></div>
 </div>
 <div id="networks">
-    <table class="table table-striped table-hover">
+    <table class="table table-hover">
             <thead>
                 <tr>
                     <th></th>
                     <th>Имя сети</th>
-                    <th>Сила сигнала</th>
+                    <th>Уровень сигнала</th>
                     <th>Скорость</th>
                     <th>Безопасность</th>
                 </tr>
             </thead>
             <tbody>
     {% for net in wifi.nets %}
-    <tr>
-                        <td width="1%"><span class="glyphicon glyphicon-stats"></span></td>
+    <tr onclick="window.location.href = 'wifi/connect/{{ net.name }}';" style="cursor: pointer">
+        {% if net.connected %}
+                        <td width="1%"><span class="glyphicon glyphicon-ok" style='color:#00FF00'></span></td>
+                        {% else %}
+                        <td width="1%"><span class="glyphicon glyphicon-signal" style='color:#000000'></span></td>
+                        {% endif %}
                         <td class="col-md-3">{{ net.name }}</td>
-                        <td class="col-md-3">{{ net.signal }}</td>
-                        <td class="col-md-3">{{ net.rate }}</td>
+                        <td class="col-md-3">{{ net.signal }}%</td>
+                        <td class="col-md-3">{{ net.rate }} Mbit/s</td>
                         <td class="col-md-3">{{ net.security }}</td>
                     </tr>
     {% endfor %}
