--- a/chip/templates/chip/wifi.html
+++ b/chip/templates/chip/wifi.html
@@ -21,9 +21,9 @@
     {% for net in wifi.nets %}
     <tr onclick="window.location.href = 'wifi/connect/{{ net.name }}';" style="cursor: pointer">
         {% if net.connected %}
-                        <td width="1%"><span class="glyphicon glyphicon-ok" style='color:#00FF00'></span></td>
+                        <td width="1%"><span class="fa fa-check-circle" style='color:#00FF00'></span></td>
                         {% else %}
-                        <td width="1%"><span class="glyphicon glyphicon-signal" style='color:#000000'></span></td>
+                        <td width="1%"><span class="fa fa-wifi" style='color:#000000'></span></td>
                         {% endif %}
                         <td class="col-md-3">{{ net.name }}</td>
                         <td class="col-md-3">{{ net.signal }}%</td>
