--- a/chip/templates/chip/wifi_connect.html
+++ b/chip/templates/chip/wifi_connect.html
@@ -4,7 +4,7 @@
   
     <div class="panel-body">
         <p>{{net}}</p>
-<form action="wifi/connect/{{ net }}/" method="POST">
+<form action="#" method="POST">
     {% csrf_token %}
   <div class="form-group">
     <label for="pwd">Key:</label>
